# my_ai_companion

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: DESIGN.md
packaging/: com.my-ai-companion.plist.template
src/ai_companion/: __init__.py  __main__.py  config.py  logging_conf.py
src/ai_companion/adapter/: __init__.py  audio_sounddevice.py  gemini_live.py  gemini_text.py  memory_sqlite.py  wake_word_oww.py
src/ai_companion/controller/: __init__.py  console.py  menubar.py  orchestrator.py
src/ai_companion/domain/: __init__.py  persona.py  ports.py  state.py  transcript.py
src/ai_companion/usecase/: __init__.py  conversation.py  memory_consolidation.py
tests/: test_config.py  test_live_session.py  test_memory.py  test_persona.py
